--- a/doc/trunk/design/syn/S01.pod
+++ b/doc/trunk/design/syn/S01.pod
@@ -12,7 +12,7 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 1 Nob 2006
+  Last Modified: 1 Nov 2006
   Number: 1
   Version: 5
 
